--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "dompurify": "^3.2.2",
+    "dotenv": "^16.4.5",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
